--- a/src/app/form-root/forms/personal-and-contact-info-form/representative-info-form/representative-info-form.component.html
+++ b/src/app/form-root/forms/personal-and-contact-info-form/representative-info-form/representative-info-form.component.html
@@ -2,11 +2,11 @@
 
 @if (form) {
   <div class="flex flex-col gap-y-3">
-    <text-input [control]="form.controls.firstName" label="First name"></text-input>
+    <text-input [control]="form.controls.firstName" label="First name" />
 
-    <text-input [control]="form.controls.lastName" label="Last name"></text-input>
+    <text-input [control]="form.controls.lastName" label="Last name" />
 
-    <text-input [control]="form.controls.phoneNumber" label="Phone number"></text-input>
+    <text-input [control]="form.controls.phoneNumber" label="Phone number" />
 
     <select-option
       [control]="form.controls.relationship"
