--- a/src/app/form-root/forms/personal-and-contact-info-form/personal-info-form/personal-info-form.component.html
+++ b/src/app/form-root/forms/personal-and-contact-info-form/personal-info-form/personal-info-form.component.html
@@ -2,90 +2,33 @@
 
 @if (form) {
   <div class="flex flex-col gap-y-3">
-    <div>
-      <label for="have-claim-number" class="block text-sm font-semibold text-gray-900">
-        Have you already received a claim number for the incident you are reporting today?
-      </label>
-      <p id="have-claim-number-helper-text" class="text-sm text-gray-500">
-        You may have received a claim number from us.
-      </p>
-    </div>
-
-    <div class="flex gap-x-3">
-      <input class="hidden" id="have-claim-number" />
-      <div class="flex items-center gap-x-2">
-        <input
-          class="border-gray-300 bg-gray-100 text-blue-500 focus:ring-1 focus:ring-white"
-          id="have-claim-number-yes"
-          name="have-claim-number"
-          [ngrxFormControlState]="form.controls.haveClaimNumber"
-          type="radio"
-          [value]="true"
-        />
-        <label for="have-claim-number-yes" class="text-sm font-medium text-gray-900">Yes</label>
-      </div>
-      <div class="flex items-center gap-x-2">
-        <input
-          class="border-gray-300 bg-gray-100 text-blue-500 focus:ring-1 focus:ring-white"
-          id="have-claim-number-no"
-          name="have-claim-number"
-          [ngrxFormControlState]="form.controls.haveClaimNumber"
-          type="radio"
-          [value]="false"
-        />
-        <label for="have-claim-number-no" class="text-sm font-medium text-gray-900">No</label>
-      </div>
-    </div>
+    <binary-radio-group
+      [control]="form.controls.haveClaimNumber"
+      [horizontal]="true"
+      label="Have claim number?"
+    >
+      <!-- TODO: pass custom template to child for stuff like the label -->
+    </binary-radio-group>
 
     @if (form.value.haveClaimNumber === true) {
-      <label for="claim-number" class="block text-sm font-semibold text-gray-900"
-        >Claim number</label
-      >
-      <input
-        class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-gray-400 focus:ring-gray-400"
-        id="claim-number"
-        [ngrxFormControlState]="form.controls.claimNumber"
-        type="text"
-      />
+      <text-input [control]="form.controls.claimNumber" label="Claim number" />
     }
 
-    <label for="legal-first-name" class="block text-sm font-semibold text-gray-900"
-      >Legal first name</label
-    >
-    <input
-      class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-gray-400 focus:ring-gray-400"
-      id="legal-first-name"
-      [ngrxFormControlState]="form.controls.legalFirstName"
-      type="text"
+    <text-input [control]="form.controls.legalFirstName" label="Legal first name" />
+
+    <text-input
+      [control]="form.controls.preferredFirstName"
+      label="Preferred first name"
+      [optional]="true"
     />
 
-    <label for="preferred-first-name" class="block text-sm font-semibold text-gray-900"
-      >Preferred first name <span class="font-normal">(optional)</span></label
-    >
-    <input
-      class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-gray-400 focus:ring-gray-400"
-      id="preferred-first-name"
-      [ngrxFormControlState]="form.controls.preferredFirstName"
-      type="text"
+    <text-input
+      [control]="form.controls.middleName"
+      label="Middle name or initial"
+      [optional]="true"
     />
 
-    <label for="middle-name" class="block text-sm font-semibold text-gray-900"
-      >Middle name or initial <span class="font-normal">(optional)</span></label
-    >
-    <input
-      class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-gray-400 focus:ring-gray-400"
-      id="middle-name"
-      [ngrxFormControlState]="form.controls.middleName"
-      type="text"
-    />
-
-    <label for="last-name" class="block text-sm font-semibold text-gray-900">Last name</label>
-    <input
-      class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-gray-400 focus:ring-gray-400"
-      id="last-name"
-      [ngrxFormControlState]="form.controls.lastName"
-      type="text"
-    />
+    <text-input [control]="form.controls.lastName" label="Last name" />
 
     <label for="date-of-birth" class="block text-sm font-semibold text-gray-900"
       >Date of birth</label
@@ -285,78 +228,20 @@
       </div>
     </div>
 
-    <label for="have-personal-health-number" class="block text-sm font-semibold text-gray-900">
-      Do you have a B.C. Personal Health Number (PHN)?
-    </label>
-    <div class="flex gap-x-3">
-      <input class="hidden" id="have-personal-health-number" />
-      <div class="flex items-center gap-x-2">
-        <input
-          class="border-gray-300 bg-gray-100 text-blue-500 focus:ring-1 focus:ring-white"
-          id="have-personal-health-number-yes"
-          name="have-claim-number"
-          [ngrxFormControlState]="form.controls.havePhn"
-          type="radio"
-          [value]="true"
-        />
-        <label for="have-personal-health-number-yes" class="text-sm font-medium text-gray-900"
-          >Yes</label
-        >
-      </div>
-      <div class="flex items-center gap-x-2">
-        <input
-          class="border-gray-300 bg-gray-100 text-blue-500 focus:ring-1 focus:ring-white"
-          id="have-personal-health-number-no"
-          name="have-personal-health-number"
-          [ngrxFormControlState]="form.controls.havePhn"
-          type="radio"
-          [value]="false"
-        />
-        <label for="have-personal-health-number-no" class="text-sm font-medium text-gray-900"
-          >No</label
-        >
-      </div>
-    </div>
+    <binary-radio-group
+      [control]="form.controls.havePhn"
+      label="Do you have a B.C. Personal Health Number (PHN)?"
+      [horizontal]="true"
+    />
 
     @if (form.value.havePhn === true) {
-      <label for="personal-health-number" class="block text-sm font-semibold text-gray-900"
-        >Personal health number (PHN)</label
-      >
-      <input
-        class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-gray-400 focus:ring-gray-400"
-        id="personal-health-number"
-        [ngrxFormControlState]="form.controls.phn"
-        type="text"
-      />
+      <text-input [control]="form.controls.phn" label="Personal Health Number (PHN)"></text-input>
     }
 
-    <label for="interpreter" class="block text-sm font-semibold text-gray-900">
-      If we need to speak with you about your claim, would you like an interpreter on the call?
-    </label>
-    <div class="flex gap-x-3">
-      <input class="hidden" id="interpreter" />
-      <div class="flex items-center gap-x-2">
-        <input
-          class="border-gray-300 bg-gray-100 text-blue-500 focus:ring-1 focus:ring-white"
-          id="interpreter-yes"
-          name="interpreter"
-          [ngrxFormControlState]="form.controls.interpreter"
-          type="radio"
-          [value]="true"
-        />
-        <label for="interpreter-yes" class="text-sm font-medium text-gray-900">Yes</label>
-      </div>
-      <div class="flex items-center gap-x-2">
-        <input
-          class="border-gray-300 bg-gray-100 text-blue-500 focus:ring-1 focus:ring-white"
-          id="interpreter-no"
-          name="interpreter"
-          [ngrxFormControlState]="form.controls.interpreter"
-          type="radio"
-          [value]="false"
-        />
-        <label for="interpreter-no" class="text-sm font-medium text-gray-900">No</label>
-      </div>
-    </div>
+    <binary-radio-group
+      [control]="form.controls.interpreter"
+      label="If we need to speak with you about your claim, would you like an interpreter on the call?"
+      [horizontal]="true"
+    />
   </div>
 }
