--- a/src/app/form-root/forms/personal-and-contact-info-form/representative-info-form/representative-info-form.component.html
+++ b/src/app/form-root/forms/personal-and-contact-info-form/representative-info-form/representative-info-form.component.html
@@ -11,7 +11,7 @@
     <select-option
       [control]="form.controls.relationship"
       label="Relationship to the injured worker"
-      default="Choose a relationship"
+      defaultLabel="Choose a relationship"
       [options]="[
         { key: 'Coworker', value: 'Co-worker' },
         { key: 'Spouse', value: 'Spouse' },
