Finish personal and contact info form

--- a/src/app/form-root/form-root.component.html
+++ b/src/app/form-root/form-root.component.html
@@ -2,7 +2,7 @@
 @let state = state$ | ngrxPush;
 
 <div *ngrxLet="form$ as form" class="mx-auto w-1/2">
-  <h1 class="mb-4 text-2xl leading-none font-bold text-gray-900">Report your injury</h1>
+  <h1 class="mb-4 text-2xl leading-none font-semibold text-gray-900">Report your injury</h1>
 
   <p>Please complete the form sections listed below. Your progress will automatically be saved.</p>
 
