--- a/src/app/form-root/forms/personal-and-contact-info-form/personal-info-form/personal-info-form.component.html
+++ b/src/app/form-root/forms/personal-and-contact-info-form/personal-info-form/personal-info-form.component.html
@@ -1,4 +1,4 @@
-<h2 class="mb-4 text-xl leading-none font-bold text-yellow-500">Your personal information</h2>
+<h2 class="mb-4 text-xl leading-none font-semibold text-yellow-500">Your personal information</h2>
 
 <div class="flex flex-col gap-y-3">
   <binary-radio-group
