--- a/src/app/form-shell/form-shell.component.html
+++ b/src/app/form-shell/form-shell.component.html
@@ -1,7 +1,7 @@
 @let drafts = (drafts$ | ngrxPush) ?? [];
 
 <div class="mx-auto w-1/2">
-  <h1 class="mb-4 text-2xl leading-none font-bold text-gray-900">Your injury reports</h1>
+  <h1 class="mb-4 text-2xl leading-none font-semibold text-gray-900">Your injury reports</h1>
 
   @if (drafts.length > 0) {
     <table class="my-6 w-full text-left text-sm text-gray-500 rtl:text-right">
