--- a/src/app/form-root/form-cards/incident-and-injury-details-form-card/incident-and-injury-details-form-card.component.html
+++ b/src/app/form-root/form-cards/incident-and-injury-details-form-card/incident-and-injury-details-form-card.component.html
@@ -1,5 +1,5 @@
 <div class="rounded-lg border border-gray-200 bg-white p-6 shadow-sm">
-  <h5 class="mb-2 text-xl font-bold tracking-tight text-gray-900">Your injury</h5>
+  <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Your injury</h5>
   <p class="mb-3 font-normal text-gray-700">
     Tell us about your injury, including the details of how, where, and when it happened.
   </p>
