--- a/src/app/form-root/form-cards/treatment-details-form-card/treatment-details-form-card.component.html
+++ b/src/app/form-root/form-cards/treatment-details-form-card/treatment-details-form-card.component.html
@@ -1,5 +1,7 @@
 <div class="rounded-lg border border-gray-200 bg-white p-6 shadow-sm">
-  <h5 class="mb-2 text-xl font-bold tracking-tight text-gray-900">Treatment you have received</h5>
+  <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">
+    Treatment you have received
+  </h5>
   <p class="mb-3 font-normal text-gray-700">
     Tell us about any medical care you've received or plan to receive for your injury.
   </p>
