Personal and contact info validation cleanup

--- a/src/app/form-root/forms/personal-and-contact-info-form/contact-info-form/contact-info-form.component.html
+++ b/src/app/form-root/forms/personal-and-contact-info-form/contact-info-form/contact-info-form.component.html
@@ -11,7 +11,7 @@
     [optional]="true"
   />
 
-  <text-input [control]="form.controls.address.controls.city" label="Phone number" />
+  <text-input [control]="form.controls.address.controls.city" label="City" />
 
   @if (form.value.address.country === 'CA') {
     <select-option
