Body parts form

--- a/src/app/form-root/forms/injury-and-incident-form/incident-overview-form/incident-overview-form.component.html
+++ b/src/app/form-root/forms/injury-and-incident-form/incident-overview-form/incident-overview-form.component.html
@@ -64,7 +64,7 @@
     <label class="block text-sm font-semibold text-gray-900" for="injury-date"
       >How has your injury or condition affected your ability to work?
       <span class="font-normal">(check all that apply)</span>
-      <p class="font-normal">
+      <p class="text-sm font-normal">
         If you have multiple employers, please consider if you've missed time or will be missing
         time from any of your jobs.
       </p></label
@@ -103,7 +103,9 @@
     <label class="block text-sm font-semibold text-gray-900" for="injury-date"
       >Has your paycheque been impacted in any of the following ways?
       <span class="font-normal">(check all that apply)</span>
-      <p class="font-normal">If you have multiple employers, please consider all of them.</p></label
+      <p class="text-sm font-normal">
+        If you have multiple employers, please consider all of them.
+      </p></label
     >
     <checkbox
       [control]="payAffected.payAffectedByRegularHours"
