Injury details form

--- a/src/app/form-root/forms/injury-and-incident-form/injury-and-incident-form.component.html
+++ b/src/app/form-root/forms/injury-and-incident-form/injury-and-incident-form.component.html
@@ -8,6 +8,8 @@
 
     <injury-details-form [form]="form.controls.injuryDetails" />
 
+    <incident-details-form [form]="form.controls.incidentDetails" />
+
     <div>
       <button
         type="button"
